# pysyntect

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  grammars
.github/: dependabot.yml
.github/workflows/: linux-build.yml  linux-release.yml  macos-build.yml  macos-release.yml  windows-build.yml  windows-release.yml
grammars/: 1c-query.sublime-syntax  ABAP.sublime-syntax  AMPL.sublime-syntax  ANTLR.sublime-syntax  ASP.sublime-syntax  Ada.sublime-syntax  Agda.sublime-syntax  AngelScript.sublime-syntax  Ant.sublime-syntax  AsciiDoc.sublime-syntax  AspectJ.sublime-syntax  Assembly x86 AT&T.sublime-syntax  AutoIt.sublime-syntax  BSV.sublime-syntax  BlitzMax.sublime-syntax  BrightAuthor Project File.sublime-syntax  BrightScript.sublime-syntax  C++.sublime-syntax  CLIPS.sublime-syntax  CM.sublime-syntax  COOL.sublime-syntax  Cirru.sublime-syntax  Clarion.tmLanguage.sublime-syntax  ColdFusionCFC.sublime-syntax  Coq.sublime-syntax  Cucumber Plain Text Feature.sublime-syntax  Cucumber Steps.sublime-syntax  D.sublime-syntax  Dylan.sublime-syntax  ECLiPSe Prolog.sublime-syntax  EEx.sublime-syntax  Eiffel.sublime-syntax  Fantom.sublime-syntax  FreeMarker.sublime-syntax  Gettext.sublime-syntax  Gradle Build Script.sublime-syntax  Groovy.sublime-syntax  HTML (EEx).sublime-syntax  HTML (Factor).sublime-syntax  HTML Liquid.sublime-syntax  (+197 more)
pysyntect/: __init__.py  pysyntect.pyi
src/: base.rs  escape.rs  exceptions.rs  highlighting.rs  lib.rs  loading.rs
src/base/: color.rs  style.rs  syntax.rs  theme.rs
syntect/: __init__.py  syntect.pyi
syntect/grammars/: 1c.sublime-syntax  ABL.sublime-syntax  APIBlueprint.sublime-syntax  AWK.sublime-syntax  ActionScript 3.sublime-syntax  Apache.sublime-syntax  AppleScript.sublime-syntax  AsDoc.sublime-syntax  Assembly (x86).sublime-syntax  AutoHotkey.sublime-syntax  Befunge-93.sublime-syntax  Bibtex.sublime-syntax  Bind Zone Files.sublime-syntax  Boo.sublime-syntax  Brainfuck.sublime-syntax  CMake Listfile.sublime-syntax  Ceylon.sublime-syntax  Cfscript.sublime-syntax  Chapel.sublime-syntax  Clarion.sublime-syntax  Coldfusion.sublime-syntax  Creole.sublime-syntax  DOT.sublime-syntax  DataWeave.sublime-syntax  Diff.sublime-syntax  Dockerfile.sublime-syntax  Elixir.sublime-syntax  Elm.sublime-syntax  Factor.sublime-syntax  Flex Config.sublime-syntax.bak  Fortran - Modern.sublime-syntax  Fortran - Punchcard.sublime-syntax  GAP.sublime-syntax  GLSL.sublime-syntax  Go.sublime-syntax  Gosu.sublime-syntax  Grace.sublime-syntax  HTML (ABL).sublime-syntax  HTML (Django).sublime-syntax  HTML (Erlang).sublime-syntax  (+199 more)
syntect/minimal_grammars/: C.sublime-syntax  Cython.sublime-syntax  MagicPython.sublime-syntax  Perl.sublime-syntax  PowerShellSyntax.sublime-syntax  gfm.sublime-syntax  rust.sublime-syntax
syntect/tests/: test_syntect.py
syntect/tests/assets/: results.json  test.c  test.cpp  test.ex  test.java  test.jsx  test.md  test.py  test.rs
themes/: Monokai.tmTheme  Moscow.tmTheme  Solarized (dark).tmTheme  Solarized (light).tmTheme  Spyder (dark).tmTheme  Spyder (light).tmTheme  zenburn.tmTheme
