[package]
name = "pysyntect"
version = "0.3.0"
authors = ["Edgar Andrés Margffoy Tuay <andfoy@gmail.com>"]
description = "Python bindings for the syntect syntax highlighter."
repository = "https://github.com/spyder-ide/pysyntect"
license = "MIT"
keywords = ["syntax", "highlighting", "syntect"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "syntect"
crate-type = ["cdylib"]

[dependencies]
syntect = "4.5"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development",
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9'
]
